tests/analyzer/valid/0000_clean_functions.tj
def add(x: int, y: int) -> int {
    return x + y
}

def multiply(a: int, b: int) -> int {
    return a * b
}

def greet(name: string) -> string {
    return "Hello, " + name
}
